--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,11 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>hello</title>
+    <link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
- <div class="note-content" contenteditable="false">
-    {{{long}}}
- </div>
+    {{{body}}}
 </body>
 </html>
