--- a/views/colon.hbs
+++ b/views/colon.hbs
@@ -10,7 +10,7 @@
  <br>
  <br>
  <b>ROS:</b><br>
-  
+  Constipation or tendency towards constipation.
  <br>
  <br>
  <b>Allergies:</b><br>
@@ -39,8 +39,12 @@
  <br>
  <br>
  <b>SH:</b>
+ {{#if smoked-or-smokes}}
  Smokes or has smoked.
+ {{/if}}
+ {{#if alcohol-2more}}
  Drinks 2 or more on occasions. 
+ {{/if}}
  <br>
  {{# if illicitdrug-use-detail}}
  Uses:{{illicitdrug-use-detail}}
