--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>hello</title>
+    <title>Personal Medication</title>
     <link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
